# stockscreeneroptionen

./: .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: build.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  markets.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: market.py  user.py
backend/app/schemas/: market.py  user.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Register.tsx  Screener.tsx
