[tool.poetry]
name = "stockscreener-backend"
version = "0.1.0"
description = "Stock Screener Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
pydantic = "2.5.2"
pydantic-settings = "2.1.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pandas = "2.0.3"
numpy = "1.24.3"
requests = "2.31.0"
python-dotenv = "1.0.0"
polygon-api-client = "1.12.3"
ta = "0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 